--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+#php storm keys
+.idea/
+*.idea/workspace.xml
+.idea/workspace.xml
